[gd_scene load_steps=2 format=3 uid="uid://6h4tckxsk6lm"]

[ext_resource type="Script" path="res://Scripts/kill_zone.gd" id="1_ihrd3"]

[node name="KillZone" type="Area2D"]
script = ExtResource("1_ihrd3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
